fixed bug with my tools icons overflow on chrome

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -279,6 +279,7 @@ body {
           .icon {
             font-size: 100px;
             height: 100px;
+      overflow:hidden;
           }
         }
       }
